Refactor navigation and UI components
This commit introduces several changes to the navigation structure and UI components:

- **Navigation:**
    - Refactored `RootNavigation` to be a sealed interface, allowing the `Main` route to carry `UserModel` data.
    - Introduced `AppNavHost` to manage navigation between main application screens like `MainScreen` and `AddGuestScreen`.
    - Implemented `NavRoute` sealed interface for defining application-level navigation destinations.
    - Updated `MainScreenViewModel` to handle navigation actions for bottom navigation and navigating to the "Add Guest" screen.
    - Renamed `MainNavRoute` to `BottomNavRoute` for clarity.
    - Renamed `BottomNavHost` data class to `BottomNavigationItemModel`.
- **UI Components:**
    - Created a reusable `AppBarComponent` with support for a title, back navigation, and an optional action icon.
    - Added `AppBarTitle`, `BackIcon`, and `LoadingComponent` as supporting UI elements.
    - Implemented `MainAppBarComponent` for the `MainScreen` to display a user profile picture.
    - Created `AddGuestScreen` with its own `AppBarComponent`.
- **Back Navigation:**
    - Introduced `BackNavigationType` enum and `LocalBack` CompositionLocal to handle different back navigation behaviors.
- **Styling & Resources:**
    - Updated light and dark color palettes.
    - Added a "Back" string resource in English and Portuguese.
    - Added a new drawable `flowers_512_512.png`.
- **Dependencies:**
    - Added Ktor client dependencies for Android and Java.
    - Added Coil network dependency.
- **Other:**
    - Modified `MainScreen` and `MainScreenContent` to integrate with the new navigation and UI components.
    - Updated `RootNavigationViewModel` to pass `UserModel` to the `Main` route.
    - Removed `alwaysOnTop` from the desktop window configuration.
    - Added logging for user profile picture URL.
    - Implemented `ActionCollector` for `MainScreenViewModel` to handle UI actions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,13 +51,16 @@ supabase-compose-auth-ui = { module = "io.github.jan-tennert.supabase:compose-au
 # Ktor
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
+ktor-client-java = { module = "io.ktor:ktor-client-java", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 
 # Kermit (logger)
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 
 # Coil
-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", version.ref = "coil" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -67,4 +70,4 @@ composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "k
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 buildkonfig_plugin = { id = "com.codingfeline.buildkonfig", version.ref = "buildkonfig" }
-composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload"}
+composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
