--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ coreSplashScreen = "1.0.1"
 ktor = "3.1.3"
 buildkonfig = "0.17.1"
 composeHotReload = "1.0.0-alpha10"
+datasSoreVersion = "1.1.7"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -39,6 +40,10 @@ koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", ver
 
 # Remember Settings
 remember-settings = { module = "dev.burnoo:compose-remember-setting", version.ref = "settings" }
+
+# Data Store
+dataStore = { module = "androidx.datastore:datastore", version.ref = "datasSoreVersion" }
+dataStore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datasSoreVersion" }
 
 # Supabase
 supabase-bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "supabase" }
